--- a/angularapp/src/app/components/customerside/userhomepage/viewpage/viewpage.component.html
+++ b/angularapp/src/app/components/customerside/userhomepage/viewpage/viewpage.component.html
@@ -4,65 +4,69 @@
     3.GIFT FINDER CONDITIONS -->
 
 
-<div *ngIf="viewType === 'occasion'">
-    <div>
+    <div *ngIf="type === 'occasion'">
+      <div>
+          <div class="dashboard-heading">
+              <div class="line"></div>
+              <h1 class="heading">Products for occasions</h1>
+              <div class="line"></div> 
+            </div>
+        <section class="products">
+        <div class="product" *ngFor="let product of products">
+          <img [src]="product.giftImageUrl" [alt]="product.giftName">
+          <h2>{{ product.giftName }}</h2>
+          <p>Rs.{{ product.giftPrice }}</p>
+          <div>
+            <span class="star-rating" *ngFor="let star of getFilledStars(product.rating)">&#9733;</span>
+            <span class="empty-star" *ngFor="let star of getEmptyStars(product.rating)">&#9733;</span>
+          </div>
+            <br>
+          <button (click)="addToCart()">Add to Cart</button> </div>
+        </section>
+      </div>
+    </div>
+    
+    
+    <div *ngIf="type === 'giftfinder'">
         <div class="dashboard-heading">
             <div class="line"></div>
-            <h1 class="heading">Products for {{ selectedOccasion }}</h1>
+            <h1 class="heading">Some gifts of your choice!!</h1>
             <div class="line"></div> 
           </div>
-      <section class="products">
-      <div class="product" *ngFor="let product of filteredProducts">
-        <img [src]="product.image" [alt]="product.name">
-        <h2>{{ product.name }}</h2>
-        <p>Rs.{{ product.price }}</p>
-        <div>
-          <span class="star-rating" *ngFor="let star of getFilledStars(product.rating)">&#9733;</span>
-          <span class="empty-star" *ngFor="let star of getEmptyStars(product.rating)">&#9733;</span>
-        </div>
-          <br>
-        <button (click)="addToCart()">Add to Cart</button> </div>
-      </section>
-    </div>
-  </div>
-
-
-  <div *ngIf="viewType === 'giftfinder'">
-    <div class="dashboard-heading">
-        <div class="line"></div>
-        <h1 class="heading">Some gifts of your choice!!</h1>
-        <div class="line"></div> 
-      </div>
-   <section class="products">
-      <div class="product" *ngFor="let product of filteredGifts">
-        <img [src]="product.image" [alt]="product.name">
-        <h2>{{ product.name }}</h2>
-        <p>Rs.{{ product.price }}</p>
-        <div>
-          <span class="star-rating" *ngFor="let star of getFilledStars(product.rating)">&#9733;</span>
-          <span class="empty-star" *ngFor="let star of getEmptyStars(product.rating)">&#9733;</span>
-        </div>
-          <br>
-        <button (click)="addToCart()">Add to Cart</button> 
-      </div>
-    </section> 
-    </div>
-
-
-    <div *ngIf="viewType === 'recipient'">
-        <div>
-          <h1>Products for {{ selectedRecipient }}</h1>
-          <section class="products">
-          <div class="product" *ngFor="let product of filteredRecipient">
-            <img [src]="product.image" [alt]="product.name">
-            <h2>{{ product.name }}</h2>
-            <p>Rs.{{ product.price }}</p>
+       <section class="products">
+          <div class="product" *ngFor="let product of gifts">
+            <img [src]="product.giftImage" [alt]="product.giftName">
+            <h2>{{ product.giftName }}</h2>
+            <p>Rs.{{ product.giftPrice }}</p>
             <div>
               <span class="star-rating" *ngFor="let star of getFilledStars(product.rating)">&#9733;</span>
               <span class="empty-star" *ngFor="let star of getEmptyStars(product.rating)">&#9733;</span>
             </div>
               <br>
-            <button (click)="addToCart()">Add to Cart</button> </div>
-          </section>
+            <button (click)="addToCart()">Add to Cart</button> 
+          </div>
+        </section> 
         </div>
-      </div>
+    
+        <div *ngIf="type === 'recipient'">
+          <div>
+            <div class="dashboard-heading">
+              <div class="line"></div>
+              <h1 class="heading">Products for Recipient</h1>
+              <div class="line"></div> 
+            </div>
+            <section class="products">
+            <div class="product" *ngFor="let product of products">
+              <img [src]="product.giftImageUrl" [alt]="product.name">
+              <h2>{{ product.giftName }}</h2>
+              <p>Rs.{{ product.giftPrice }}</p>
+              <div>
+                <span class="star-rating" *ngFor="let star of getFilledStars(product.rating)">&#9733;</span>
+                <span class="empty-star" *ngFor="let star of getEmptyStars(product.rating)">&#9733;</span>
+              </div>
+                <br>
+              <button (click)="addToCart()">Add to Cart</button> </div>
+            </section>
+          </div>
+        </div>
+    
