--- a/angularapp/src/app/components/adminside/addgifts/addgifts.component.html
+++ b/angularapp/src/app/components/adminside/addgifts/addgifts.component.html
@@ -194,7 +194,7 @@
 
               <div class="mb-3">
                 <label for="email" class="form-label">Occassion:</label>       
- <input type="text" id="addGiftDetails" placeholder="enter the Occassion" [(ngModel)]="gifts.occassion" name="occassion"class="form-control">
+ <input type="text" id="addGiftDetails" placeholder="enter the Occassion" [(ngModel)]="gifts.occasion" name="occassion"class="form-control">
               </div>
 
               <div class="mb-3">
