--- a/angularapp/src/app/components/adminside/updategift/updategift.component.html
+++ b/angularapp/src/app/components/adminside/updategift/updategift.component.html
@@ -83,8 +83,8 @@
             </div>
 
             <div class="mb-3">
-              <label for="email" class="form-label">Occassion:</label>       
-<input type="text" id="addGiftDetails" placeholder="enter the Occassion" [(ngModel)]="gifts.occassion" name="occassion"class="form-control">
+              <label for="email" class="form-label">Occasion:</label>       
+<input type="text" id="addGiftDetails" placeholder="enter the Occasion" [(ngModel)]="gifts.occasion" name="occasion"class="form-control">
             </div>
 
             <div class="mb-3">
