--- a/angularapp/src/app/components/adminside/order/order.component.html
+++ b/angularapp/src/app/components/adminside/order/order.component.html
@@ -22,24 +22,24 @@
 <br>
 <div>
 <table id="order1">
-<thead>
-    <th id="orderid">Order Id</th>
-    <th id="userid">User id</th>
-    <th id="giftname">Gift Name</th>
-    <th id="giftprice">Gift Price</th>
-    <th id="giftpaid">Amount Paid<br>(Gifts & Themes)</th>
-    <th id="giftquantity">Quantity</th>
-</thead>
-<tbody>
-    <tr *ngFor="let gift of gifts ; let i =index ">
-        <td id = "user{{i+1}}">{{gift.orderId}}</td>
-        <td>User{{i+1}}</td>
-        <td>{{gift.giftName}}</td>
-        <td>{{gift.giftPrice}}</td>
-        <td>{{gift.giftPaid}}</td>
-        <td>{{gift.giftQuantity}}</td>
-    </tr>
-</tbody>
+    <thead>
+        <th id="orderid">Order Id</th>
+        <th id="userid">User id</th>
+        <th id="giftname">Gift Name</th>
+        <th id="giftprice">Gift Price</th>
+        <!-- <th id="giftpaid">Amount Paid<br>(Gifts & Themes)</th> -->
+        <th id="giftquantity">Quantity</th>
+    </thead>
+    <tbody>
+        <tr *ngFor="let gift of gifts ; let i =index ">
+            <td id = "user{{i+1}}">{{gift.orderId}}</td>
+            <td>User{{i+1}}</td>
+            <td>{{gift.orderName}}</td>
+            <td>{{gift.orderPrice}}</td>
+            <!-- <td>{{gift.giftPaid}}</td>  -->
+            <td>{{1}}</td>
+        </tr>
+    </tbody>
 </table>
 </div>
 </div>
