--- a/angularapp/src/app/components/customerside/customerside.component.html
+++ b/angularapp/src/app/components/customerside/customerside.component.html
@@ -4,7 +4,7 @@
     </div>
     <ul>
     <li><a routerLink="/userhomepage">Homepage</a></li>
-        <li><a routerLink="/customerorder">PlaceOrder</a></li>
+        <li><a routerLink="/customerorder/:id">PlaceOrder</a></li>
             <li><a routerLink="/cart">MyOrder</a></li>
             <li><a routerLink="/logout">Logout</a></li>
                 
