--- a/angularapp/src/app/components/adminside/edit/edit.component.html
+++ b/angularapp/src/app/components/adminside/edit/edit.component.html
@@ -1,10 +1,11 @@
-<nav class="navbar navbar-dark navbar-custom">
-    <a class="navbar-brand fa fa-camera" href="#" id="admin"><b>Photoshop</b></a>
-    <a class="navbar-brand fa fa-gift" href="../addgifts/" id="adminGifts">Gifts</a>
-    <a class="navbar-brand fa fa-search" href="../add-delete/" id="adminThemes">Themes</a>
-    <a class="navbar-brand fa fa-comments" href="../adminreview/">Customers Feedback</a>
-    <a class="navbar-brand fa fa-shopping-cart" href="../order/" id="adminOrders">Orders</a>
-    <a class="navbar-brand" href="../logout">Logout</a>
+<nav class="navbar navbar-dark">
+    <a class="navbar-brand fa fa-camera" [routerLink]="['/admin']" id="admin"><b>Photoshop</b></a>
+    <a class="navbar-brand fa fa-home" [routerLink]="['/admin']">Home</a>
+    <a class="navbar-brand fa fa-gift" [routerLink]="['/addgifts']" id="adminGifts">Gifts</a>
+    <a class="navbar-brand fa fa-search" [routerLink]="['/theme']" id="adminThemes">Themes</a>
+    <a class="navbar-brand fa fa-comments" [routerLink]="['/admin-review']">Customers Feedback</a>
+    <a class="navbar-brand fa fa-shopping-cart" [routerLink]="['/order']" id="adminOrders">Orders</a>
+    <a class="navbar-brand" href="#" (click)="logout()">Logout</a>
 </nav>
 
 
