--- a/angularapp/src/app/components/adminside/order/order.component.html
+++ b/angularapp/src/app/components/adminside/order/order.component.html
@@ -1,13 +1,13 @@
 <router-outlet></router-outlet>
 <div class="head">
     <nav class="navbar navbar-dark">
-        <a class="navbar-brand fa fa-camera" href="#" id="admin"><strong>Photoshop</strong></a>
-        <a class="navbar-brand fa fa-home" href="../admin">Home</a>
-        <a class="navbar-brand fa fa-gift" href="../addgifts" id="adminGifts">Gifts</a>
-        <a class="navbar-brand fa fa-search" href="../theme" id="adminThemes">Themes</a>
-        <a class="navbar-brand fa fa-comments" href="../admin-review">Customers Feedback</a>
-        <a class="navbar-brand fa fa-shopping-cart" href="../order" id="adminOrders">Orders</a>
-        <a class="navbar-brand" href="../admin">Logout</a>
+        <a class="navbar-brand fa fa-camera" [routerLink]="['/admin']" id="admin"><b>Photoshop</b></a>
+        <a class="navbar-brand fa fa-home" [routerLink]="['/admin']">Home</a>
+        <a class="navbar-brand fa fa-gift" [routerLink]="['/addgifts']" id="adminGifts">Gifts</a>
+        <a class="navbar-brand fa fa-search" [routerLink]="['/theme']" id="adminThemes">Themes</a>
+        <a class="navbar-brand fa fa-comments" [routerLink]="['/admin-review']">Customers Feedback</a>
+        <a class="navbar-brand fa fa-shopping-cart" [routerLink]="['/order']" id="adminOrders">Orders</a>
+        <a class="navbar-brand" href="#" (click)="logout()">Logout</a>
   </nav>
 </div>
 <div id="body">
