--- a/angularapp/src/app/components/auth/login/login.component.html
+++ b/angularapp/src/app/components/auth/login/login.component.html
@@ -8,13 +8,13 @@ background: url('assets/image/user.jpg')no-repeat;
 background-position: center;
 background-size: cover;">
     
-    <div class="dropdown">
+    <!-- <div class="dropdown">
         <button class="dropbtn">User</button>
         <div class="dropdown-content">
           <a href="#">User</a>
           <a href="#">Admin</a>
         </div>
-      </div>
+      </div> -->
     <div class="form-box">
         <div class="form-value">
             <form (submit)="loginUser()" name="LoginForm">
