--- a/angularapp/src/app/components/adminside/order/order.component.html
+++ b/angularapp/src/app/components/adminside/order/order.component.html
@@ -35,7 +35,7 @@
             <td>User{{i+1}}</td>
             <td>{{gift.orderName}}</td>
             <td>{{gift.orderPrice}}</td>
-            <td>{{1}}</td>
+            <td>{{giftquantity}}</td>
         </tr>
     </tbody>
 </table>
